--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,10 +1,21 @@
 @import "./typography";
 @import "./variables";
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  background-color: rgb(158, 190, 190);
+  background-color: rgb(158, 190, 190); // Default light theme background color
+}
+
+body.light {
+  background-color: rgb(158, 190, 190); // Light theme background color
+  color: #000; // Light theme text color
+}
+
+body.dark {
+  background-color: #333; // Dark theme background color
 }
